<resources>
    <string name="app_name">Whatsapp</string>
    <string name="btn_cadastrar">Cadastrar</string>
    <string name="hint_email">Digite seu e-mail</string>
    <string name="hint_senha">Digite a sua senha</string>
    <string name="textview_Cadastre">Ainda não tem acesso?Cadastre-se</string>
    <string name="Description_logo">Logo</string>
    <string name="hint_Nome">Digite seu nome</string>
    <string name="actionsSettings">Configurações</string>
    <string name="actiosExit">Sair</string>
    <string name="actionsPesquisa">Pesquisa</string>
    <string name="actionsAdicionar">Adicionar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
